Fix distance label not fitting on map page

--- a/python/ecep/portal/static/css/locations.css
+++ b/python/ecep/portal/static/css/locations.css
@@ -135,7 +135,7 @@
 .subnav .navbar-search select.search-query {
     padding: 2px 9px;
     margin: 0 12px;
-    width: 7em;
+    width: 8em;
     height: 25px;
     border-radius: 3px;
 }
